test_programs/compile_failure/dup_trait_items_1/src/main.nr
trait MyTrait {
  fn SomeFunc();
  fn SomeFunc();
}

fn main() {
}
